Added Flipcard with Angular Material Icons

--- a/src/app/demo-02/demo-02.component.html
+++ b/src/app/demo-02/demo-02.component.html
@@ -12,3 +12,23 @@
   <div empty-content>message when grid is empty</div>
 </gridstack>
 
+
+<app-flip-card>
+  <app-flip-card-front>
+    <h2>Card Front empty</h2>
+  </app-flip-card-front>
+  <app-flip-card-back>
+    <h2>Card Back empty</h2>
+  </app-flip-card-back>
+</app-flip-card>
+
+<div class="red-theme">
+  <app-flip-card >
+    <app-flip-card-front>
+      <h2>Card Front red-theme</h2>
+    </app-flip-card-front>
+    <app-flip-card-back>
+      <h2>Card Back red-theme</h2>
+    </app-flip-card-back>
+  </app-flip-card>
+</div>
