--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
   <li><a routerLink="/demo-01">Demo 01</a></li>
   <li><a routerLink="/demo-02">Demo 02</a></li>
   <li><a routerLink="/demo-03">Demo 03</a></li>
+  <li><a routerLink="/demo-04">Demo 04 - Widget</a></li>
+
 </ul>
 
 <router-outlet />
