--- a/src/shared/UI/flip-card/flip-card.component.scss
+++ b/src/shared/UI/flip-card/flip-card.component.scss
@@ -1,5 +1,10 @@
+// Add more themes as needed and override specific styles adding more :host-context() rules at the bottom
+// Example for a compact version of the flip card component. Add the class "flip-card-compact" to a parent element
+// :host-context(.flip-card-compact) { ...}
+
+
 .container {
-  width: 300px;
+  width: 100%;
   height: 180px;
   display: block;
   position: relative;
@@ -54,5 +59,8 @@
   border: 1px solid #fff;
 }
 
-// Add more themes as needed and override specific styles
-// :host-context(.flip-card-compact) { ...}
+
+// Example of a theme override
+// :host-context(.dark-theme) .container {
+//   border: 1px solid #444;
+// }
